--- a/VirtualUniverse/Data/html/translations/es.po
+++ b/VirtualUniverse/Data/html/translations/es.po
@@ -232,7 +232,7 @@ msgid "CatPropertyRental"
 msgstr "Casa en alquiler"
 
 msgid "CatSelect"
-msgstr ""
+msgstr "selecciona una categoría"
 
 msgid "CatService"
 msgstr "Servicio"
@@ -479,6 +479,9 @@ msgstr "Friends"
 
 msgid "FullRegion"
 msgstr "Región llena"
+
+msgid "ga"
+msgstr "Irish"
 
 msgid "GeneralText"
 msgstr "General"
@@ -1547,3 +1550,6 @@ msgstr "Pantalla completa"
 
 msgid "Yes"
 msgstr "Sí"
+
+msgid "zh_CN"
+msgstr "简体中文"
