--- a/VirtualUniverse/Data/html/translations/nl.po
+++ b/VirtualUniverse/Data/html/translations/nl.po
@@ -232,7 +232,7 @@ msgid "CatPropertyRental"
 msgstr "Eigendom Huur"
 
 msgid "CatSelect"
-msgstr ""
+msgstr "selecteer categorie"
 
 msgid "CatService"
 msgstr "Service"
@@ -479,6 +479,9 @@ msgstr "Friends"
 
 msgid "FullRegion"
 msgstr "Volledige Regio"
+
+msgid "ga"
+msgstr "Irish"
 
 msgid "GeneralText"
 msgstr "Algemeen"
@@ -1553,3 +1556,6 @@ msgstr "Full Screen"
 
 msgid "Yes"
 msgstr "Yes"
+
+msgid "zh_CN"
+msgstr "简体中文"
